remaining tuiter and challenge

--- a/public/tuiter/edit-profile.html
+++ b/public/tuiter/edit-profile.html
@@ -5,6 +5,27 @@
     <title>Title</title>
 </head>
 <body>
-Edit profile page
+<a href="profile.html">Back</a>
+<h1>Tuiter</h1>
+<h2>Edit Profile</h2>
+<a href="profile.html">Save</a>
+<img src="images/banner.png" width="100%" height="200px"> <br/>
+<input type="file"/> <br/>
+<img src="images/profile.jpg" width="48px" height="48px"> <br/>
+<input type="file"/>
+<hr>
+<form id="profile-information">
+    <label>Name </label> <br/>
+    <input type="text" placeholder="Name" name="WebDev"/>
+    <hr>
+    <br/>
+    <label>Bio </label> <br/>
+    <textarea cols="50" rows="10">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+        incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+        laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate veli
+        esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa
+        qui officia deserunt mollit anim id est laborum.</textarea>
+</form>
+
 </body>
 </html>
