--- a/public/labs/a2/html/index.html
+++ b/public/labs/a2/html/index.html
@@ -5,6 +5,7 @@
     <title>Title</title>
 </head>
 <body>
+<h1>HTML Examples</h1>
 <h2>Heading Tags</h2>
 Text documents are often broken up into several sections and subsections. Each section is usually prefaced with a
 short title or heading that attempts to summarize the topic of the section it precedes. The font of the section
