--- a/public/tuiter/edit-profile.html
+++ b/public/tuiter/edit-profile.html
@@ -16,9 +16,8 @@
 <hr>
 <form id="profile-information">
     <label>Name </label> <br/>
-    <input type="text" placeholder="Name" name="WebDev"/>
+    <input type="text" placeholder="Name" value="WebDev"/>
     <hr>
-    <br/>
     <label>Bio </label> <br/>
     <textarea cols="50" rows="10">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
         incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
