--- a/public/tuiter/home.html
+++ b/public/tuiter/home.html
@@ -40,6 +40,44 @@
         <a href="like.html">Like</a> 235
         <a href="share.html">Share</a>
     </li>
+    <br/>
+    <li>
+        <a href="topic.html">Topic 456</a><br>
+        <img src="images/profile.jpg" height="48px" width="48px">
+        <a href="profile.html">Paolo</a>@paolo - 4h
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam nunc felis, consectetur nec volutpat
+            molestie, condimentum at lorem. Suspendisse ac tincidunt nibh. Sed nunc tellus, pellentesque quis odio id,
+            lacinia dictum massa. Vestibulum in purus elementum, porta felis non, auctor leo. Integer viverra finibus
+            turpis, vel placerat velit. Donec quis placerat risus. Vestibulum in enim at turpis fringilla fermentum
+            vitae vel diam. Pellentesque lobortis posuere neque bibendum accumsan. Pellentesque viverra semper lorem
+            vitae laoreet. Phasellus gravida arcu eu urna tincidunt, quis sodales purus aliquet. Donec egestas tortor
+            nec finibus iaculis. Fusce tristique maximus odio. Pellentesque ultrices sollicitudin sodales. Vivamus
+            fermentum libero turpis, eget mattis nulla porttitor ac. Cras lacus nulla, maximus non dolor ut, accumsan
+            faucibus dolor. Aliquam erat volutpat.</p>
+        <a href="reply.html">Reply</a> 300
+        <a href="retuit.html">Retuit</a> 24
+        <a href="like.html">Like</a> 205
+        <a href="share.html">Share</a>
+    </li>
+    <br/>
+    <li>
+        <a href="topic.html">Topic 789</a><br>
+        <img src="images/profile.jpg" height="48px" width="48px">
+        <a href="profile.html">Rachel</a>@rachel - 4h
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam nunc felis, consectetur nec volutpat
+            molestie, condimentum at lorem. Suspendisse ac tincidunt nibh. Sed nunc tellus, pellentesque quis odio id,
+            lacinia dictum massa. Vestibulum in purus elementum, porta felis non, auctor leo. Integer viverra finibus
+            turpis, vel placerat velit. Donec quis placerat risus. Vestibulum in enim at turpis fringilla fermentum
+            vitae vel diam. Pellentesque lobortis posuere neque bibendum accumsan. Pellentesque viverra semper lorem
+            vitae laoreet. Phasellus gravida arcu eu urna tincidunt, quis sodales purus aliquet. Donec egestas tortor
+            nec finibus iaculis. Fusce tristique maximus odio. Pellentesque ultrices sollicitudin sodales. Vivamus
+            fermentum libero turpis, eget mattis nulla porttitor ac. Cras lacus nulla, maximus non dolor ut, accumsan
+            faucibus dolor. Aliquam erat volutpat.</p>
+        <a href="reply.html">Reply</a> 30
+        <a href="retuit.html">Retuit</a> 40
+        <a href="like.html">Like</a> 103
+        <a href="share.html">Share</a> 2
+    </li>
 </ul>
 </body>
 </html>
