fix class names

--- a/public/tuiter/explore.html
+++ b/public/tuiter/explore.html
@@ -13,10 +13,10 @@
 <!--<h4>-->
 <!--    back-->
 <!--</h4>-->
-<main id="main">
-    <div class="wd-searchbar-section pos-relative grid-row">
+<main class="wd-main">
+    <div class="wd-searchbar-section pos-relative wd-grid-row">
 
-        <span class="wd-searchbar-holder grid-col-half-page">
+        <span class="wd-searchbar-holder wd-grid-col-half-page">
             <i class="fas fa-search wd-search-tweet-icon"></i>
             <input type="text" class="wd-searchbar" size="50"
                    placeholder="Search Tuiter">
@@ -31,7 +31,7 @@
     <div class="wd-tab-head">
         <div>
             <ul class="wd-tab-list">
-                <li class="active-tab">For You</li>
+                <li class="wd-active-tab">For You</li>
                 <li>Trending</li>
                 <li>COVID-19</li>
                 <li>News</li>
@@ -50,8 +50,8 @@
                         <span class="wd-tweet-setting">
                             <i class="fas fa-ellipsis-h"></i>
                         </span>
-                        <span class="wd-post-title row">Starship</span>
-                        <span class="wd-post-tweet-count row">55.5K Tweets</span>
+                        <span class="wd-post-title wd-row">Starship</span>
+                        <span class="wd-post-tweet-count wd-row">55.5K Tweets</span>
                     </div>
                 </li>
                 <li class="wd-post-trend-item">
@@ -61,8 +61,8 @@
                         <span class="wd-tweet-setting">
                             <i class="fas fa-ellipsis-h"></i>
                         </span>
-                        <span class="wd-post-title row">Joe Rogan</span>
-                        <span class="wd-post-tweet-count row">5,218 Tweets</span>
+                        <span class="wd-post-title wd-row">Joe Rogan</span>
+                        <span class="wd-post-tweet-count wd-row">5,218 Tweets</span>
                     </div>
                 </li>
                 <li class="wd-post-article-item">
@@ -71,7 +71,7 @@
                         </span>
                         <i class="fas fa-user-check wd-icon-verified"></i>
                         <span class="wd-post-topic wd-post-tag">Yesterday</span>
-                        <span class="wd-post-title row">CNN's Cuomo conundrum: A star anchor with a brother in
+                        <span class="wd-post-title wd-row">CNN's Cuomo conundrum: A star anchor with a brother in
                             trouble</span>
                     </div>
                     <div class="wd-right-child">
@@ -84,7 +84,7 @@
                         <span class="wd-post-topic">Covid-19</span>
                         <span class="wd-post-tag wd-post-topic">LIVE</span>
 
-                        <span class="wd-post-title row">COVID-19: News and updates for Massachusetts</span>
+                        <span class="wd-post-title wd-row">COVID-19: News and updates for Massachusetts</span>
                     </div>
                     <div class="wd-right-child">
                         <img src="images/img_post_covid.png">
@@ -95,7 +95,7 @@
                         <span class="wd-post-author">Bloomberg Opinion</span>
                         <i class="fas fa-user-check wd-icon-verified"></i>
                         <span class="wd-post-topic wd-post-tag">Yesterday</span>
-                        <span class="wd-post-title row">Thinking about getting a booster? Read this first.</span>
+                        <span class="wd-post-title wd-row">Thinking about getting a booster? Read this first.</span>
                     </div>
                     <div class="wd-right-child">
                         <img src="images/img_post_booster.jpg">
@@ -107,8 +107,8 @@
                         <span class="wd-tweet-setting">
                             <i class="fas fa-ellipsis-h"></i>
                         </span>
-                        <span class="wd-post-title row">Wonder Bread</span>
-                        <span class="wd-post-tweet-count row">1,259 Tweets</span>
+                        <span class="wd-post-title wd-row">Wonder Bread</span>
+                        <span class="wd-post-tweet-count wd-row">1,259 Tweets</span>
                     </div>
                 </li>
 
