back link and correction in lab

--- a/public/labs/a3/css/index.html
+++ b/public/labs/a3/css/index.html
@@ -3,15 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <!--    <style>-->
-    <!--        p {-->
-    <!--            background-color: blue;-->
-    <!--            color: white;-->
-    <!--        }-->
-    <!--    </style>-->
     <link href="index.css" rel="stylesheet"/>
 </head>
 <body>
+<h3><a href="../../../index.html">Back</a></h3>
+<!--<h3><a href="/public/index.html">Back</a></h3>-->
 <h1>Cascading Style Sheet (CSS)</h1>
 <h2>Style attribute and tag</h2>
 <h3>Style attribute</h3>
@@ -166,7 +162,7 @@
         Square
     </div>
 </div>
-
+<br><br><br><br><br><br><br>
 <h3>Fixed position</h3>
 Checkout the blue square that says "Fixed position" stuck all the way on the right
 and half way down the page. It doesn't scroll with the rest of the page.
